--- a/layout.html
+++ b/layout.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout</title>
   </head>
-  <body></body>
+  <body>
+    <p>this time will no more error</p>
+  </body>
 </html>
