--- a/new_file.html
+++ b/new_file.html
@@ -11,5 +11,7 @@
     string second 
     hope i will passed this exam
     <h1>ahha</h1>
+    <h2>asyh</h2>
+    <h3>hjasbhsa</h3>
 </body>
 </html>
