--- a/layout.html
+++ b/layout.html
@@ -16,5 +16,6 @@
     <h2>here is dev branch</h2>
     check pull
     check agan :v
+    test git rebase by changing sthin ob branch master at remote
   </body>
 </html>
